# cinema-natal-est-gio

./: README.md  manage.py  pyproject.toml
cinema/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
cinema/migrations/: 0001_initial.py  0002_alter_seat_options_remove_movie_duration_minutes_and_more.py
cinépolis-natal/: pyproject.toml
cinépolis-natal/src/cinépolis_natal/: __init__.py
config/: settings.py  urls.py
temp_project/: settings.py
