[tool.poetry]
name = "cinepolis-natal-api"
version = "0.1.0"
package-mode = false
description = "API para o processo seletivo da Cinepolis Natal"
authors = ["Aisla"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.0"
drf-spectacular = "^0.27.0"
djangorestframework-simplejwt = "^5.3.0"
django-redis = "^5.4.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
